--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -57,13 +57,13 @@
             android:layout_marginTop="8dp"
             android:background="@android:color/transparent"
             android:textColorLink="@color/white"
-            app:buttonTint="@android:color/transparent"
+            app:buttonTint="@android:color/darker_gray"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.109"
+            app:layout_constraintHorizontal_bias="0.11"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.71000004" />
+            app:layout_constraintVertical_bias="0.72" />
 
         <EditText
             android:id="@+id/username"
