--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,8 +30,8 @@
 
         <Button
             android:id="@+id/forgetPassword"
-            android:layout_width="85dp"
-            android:layout_height="18dp"
+            android:layout_width="87dp"
+            android:layout_height="26dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -43,7 +43,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.712" />
+            app:layout_constraintVertical_bias="0.712"
+            tools:layout_editor_absoluteY="380dp"
+            tools:layout_editor_absoluteX="168dp" />
 
         <CheckBox
             android:id="@+id/remainLogin"
@@ -76,7 +78,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ems="10"
-            android:hint="戏票编号"
+            android:hint="邮箱编号"
             android:inputType="textEmailAddress"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -128,8 +130,8 @@
 
         <Button
             android:id="@+id/register"
-            android:layout_width="124dp"
-            android:layout_height="22dp"
+            android:layout_width="139dp"
+            android:layout_height="32dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="32dp"
