--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -93,6 +93,40 @@
             </LinearLayout>
 
 
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <ImageView
+                    android:id="@+id/imageVie"
+                    android:layout_width="58dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/download" />
+
+                <TextView
+                    android:id="@+id/setting"
+                    android:layout_width="242dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.01"
+                    android:gravity="fill_vertical"
+                    android:text="我的下载"
+                    android:textAllCaps="true"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="fill_vertical"
+                    android:gravity="fill_vertical"
+                    app:srcCompat="@drawable/black_back" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
