--- a/app/src/main/res/layout/activity_emptyactivity.xml
+++ b/app/src/main/res/layout/activity_emptyactivity.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="再按一次返回键重写连接树状图"
+        android:text="再按一次返回键重新连接树状图"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
