--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -104,7 +104,7 @@
                     android:id="@+id/imageVie"
                     android:layout_width="58dp"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/download" />
+                    app:srcCompat="@drawable/setting" />
 
                 <TextView
                     android:id="@+id/setting"
@@ -112,7 +112,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1.01"
                     android:gravity="fill_vertical"
-                    android:text="我的下载"
+                    android:text="设置"
                     android:textAllCaps="true"
                     android:textSize="18sp" />
 
